[project]
name = "deep-research-workflows"
version = "0.1.0"
description = "Multi-agent research workflow using LangChain, LangGraph, and web tools."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.1.44",
    "langchain-openai>=0.1.8",
    "langchain-anthropic>=0.1.8",
    "langchain>=0.1.16",
    "langgraph>=0.0.38",
    "langchain-community>=0.0.34",
    "typing-extensions>=4.0.0",
    "ipykernel>=6.0.0",
    "langchain-tavily>=0.2.3",
]

[project.optional-dependencies]
test = [
    "ipdb>=0.13.13",
    "pytest>=8.2.0",
]
